# lucurious

./: .gitignore  LICENSE  LICENSE.txt  PKGBUILD  README.md  meson.buiild  meson.build
docs/: README.md  meson.build  wlu_freeup_vk.3  wlu_image.3  wlu_init_vk.3  wlu_vkall.h.3
examples/: Makefile  README.md  simple_example.c  simple_example.h
examples/nospir-v/: Makefile  simple_example.c  simple_example.h
examples/nospir-v/2D/: Makefile  simple_example.c  simple_example.h
examples/nospir-v/3D/: simple_example.c  simple_example.h
examples/spir-v/: Makefile  simple_example.c  simple_example.h
examples/spir-v/2D/: Makefile  simple_example.c  simple_example.h
examples/spir-v/3D/: Makefile  simple_example.c  simple_example.h
examples/spir-v/shaders/: 2Dshader.vert  3Dshader.frag  3Dshader.vert
include/: lucom.h  lucurious.h  meson.build  stb_image.h
include/display/: all.h  edid.h  fb.h  input.h  kms.h  session.h  types.h
include/drm/: all.h  create.h  device.h  edid.h  info.h  input.h  logind.h  screen.h  setup.h  types.h
include/exec/: helpers.h  vkinfo.h
include/logs/: deamon.h
include/math/: all.h  print.h  set.h  types.h
include/shader/: file.h  shade.h  types.h
include/spirv/: all.h  file.h  shade.h  types.h
include/test/: tester.h
include/utils/: all.h  clock.h  errors.h  file.h  log.h  mm.h  types.h
include/vkcomp/: all.h  bind.h  cmd.h  create.h  device.h  display.h  exec.h  set.h  setup.h  types.h  update.h  utils.h  vk_calls.h  vlayer.h
include/vkcomp/funcs/: copy.h  create.h  device.h  display.h  exec.h  set.h  setup.h  utils.h  values.h  vk_calls.h  vlayer.h
include/vkcomp/gp/: bind.h  cmd.h  create.h  exec.h  set.h  update.h
include/vkcomp/matrix/: print.h  set.h
include/vlucur/: device.h  devices.h  display.h  errors.h  utils.h  values.h  vkall.h  vlucur.h
include/wayland/: all.h  create.h  setup.h  types.h
include/wayland/backend/: drm_info.h  globals.h  screen.h
include/wayland/utils/: drm_info.h  shm.h
include/wayland/wclient/: client.h  create.h  setup.h
include/wclient/: client.h  shm.h
include/wlu/shader/: shade.h
include/wlu/utils/: errors.h  file.h  log.h  mm.h
include/wlu/vlucur/: gp.h  matrix.h  types.h  vkall.h
include/wlu/wclient/: client.h
includes/: meson.build
src/: README.md  main.c  meson.build
src/display/: edid.c  fb.c  input.c  kms.c  libdrm.c  meson.build  session.c  setup.c
src/drm/: create.c  device.c  edid.c  info.c  input.c  logind.c  meson.build  screen.c  setup.c
src/exec/: helpers.c  main.c  meson.build  vk_info.c  vkinfo.c
src/logs/: deamon.c  meson.build
src/math/: meson.build  print.c  set.c
src/shader/: file.c  meson.build  shade.c
src/spirv/: file.c  meson.build  shade.c
src/utils/: clock.c  errors.c  file.c  log.c  meson.build  mm.c
src/vkcomp/: bind.c  cmd.c  create.c  device.c  display.c  exec.c  meson.build  setup.c  update.c  utils.c  vk_calls.c  vlayer.c
src/vkcomp/funcs/: copy.c  create.c  device.c  display.c  exec.c  set.c  setup.c  utils.c  values.c  vk_calls.c  vlayer.c
src/vkcomp/gp/: bind.c  cmd.c  create.c  exec.c  set.c  update.c
src/vkcomp/matrix/: print.c  set.c
src/vulkan/: devices.c  display.c  errors.c  graphics_pipeline.c  hello_triangle_app.c  hta_backup.c  matrix.c  meson.build  setup.c  utils.c  vkall.c  vlayer.c
src/vulkan/gp/: bind.c  cmd.c  create.c  exec.c  set.c  update.c
src/vulkan/matrix/: matrix.c  print.c  set.c
src/vulkan/vkcomp/: copy.c  create.c  device.c  display.c  exec.c  set.c  setup.c  utils.c  values.c  vlayer.c
src/wayland/: create.c  meson.build  setup.c
src/wayland/backend/: drm_info.c  globals.c  meson.build  screen.c
src/wayland/protocols/: meson.build
src/wayland/protos/: meson.build
src/wayland/utils/: drm_info.c  meson.build  shm.c
src/wayland/wclient/: client.c  create.c  meson.build  setup.c  shm.c
src/wayland/wserver/: meson.build
test/: client-test.c  meson.build  test-runner.c  vlucur-test.c
tests/: README.md  helpers.c  meson.build  test-3D-main.c  test-alloc.c  test-cube.c  test-drm-basics.c  test-extras.h  test-image-texture.c  test-main.c  test-rotate-rect.c  test-runner.c  test-shade.c  test-shade.h  test-spin-square.c  test-square.c  test-triangle.c  test-vulkan.c  test-wclient.c
tests/shaders/: meson.build  mv.sh
tests/wayland/: client.c  client.h  meson.build
